--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ a {
 }
 
 body {
-background: black;
+background: rgb(255, 255, 255);
 font-family: 'Comfortaa', cursive;
 font-family: 'DM Sans', 
 }
@@ -31,7 +31,7 @@ img.avatar{
 width: 120px;
 height: 120px;
     border-radius: 50%;
-    border: 4px rgb(25, 71, 252) solid;
+    border: 4px rgb(149, 149, 149) solid;
 
 }
 ul{
@@ -41,9 +41,9 @@ ul{
 h1 {
     margin-top: 24px;
     margin-bottom: 8px;
-    color: white;
+    color: rgb(0, 0, 0);
     opacity: 0.8;
-    font-size: 23px;
+    font-size: 21px;
  
 }
 ul li a {
@@ -51,7 +51,7 @@ height: 53px;
     display:flex;
     align-items: center;
     justify-content: center;
-    background: rgb(25, 71, 252) ;
+    background: rgb(149, 149, 149);
     color: white;
     text-transform: uppercase;
   margin-bottom: 16px;
@@ -75,7 +75,7 @@ p {
 footer{
     font-weight: 500;
     font-size: 12px;
-    color: gray;
+    color: rgb(0, 0, 0);
     opacity: 0.6;
 }
 
